--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Please, be welcome to my portfolio and<br />
           <img width="30" height="30" src="/assets/svg/x-icon.svg" alt="Close button icon" />
         </button>
         <img id="project-detail-image" src="/assets/img/project-1.jpg" alt="Project image" class="project__image" />
-        <p id="project-text" class="project__text">Describe this project, whas it a college activity or an acctual job? What did you do ? link the website bellow if you can.</p>
+        <p id="project-text" class="project__text">Rocketseat's Next Level Week project, where was created a selective collection website for a city using HTML, CSS and JavaScript. (in progress)</p>
         
         <div class="project__controls">
           <button id="prev-project-btn" class="project__select-btn project__select-btn--prev">
@@ -70,15 +70,15 @@ Please, be welcome to my portfolio and<br />
       <h2 class="section__title">skills</h2>
       <ul class="skills__list">
         <li class="skill__item">
-          <a target="_blank" href="https://www.w3schools.com/css/">
+          <a href="#">
             <img src="/assets/svg/skills/css-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">css</span>
           </a>
         </li>
         <li class="skill__item">
-          <a target="_blank" href="https://www.gatsbyjs.com/">
-            <img src="/assets/svg/skills/gatsby-icon.svg" alt="Skill icon" class="skill__icon" />
-            <span class="skill__name">gatsby</span>
+          <a href="#">
+            <img src="/assets/svg/skills/typescript-icon.svg" alt="Skill icon" class="skill__icon" />
+            <span class="skill__name">typescript</span>
           </a>
         </li>
         <li class="skill__item">
@@ -88,21 +88,15 @@ Please, be welcome to my portfolio and<br />
           </a>
         </li>
         <li class="skill__item">
-          <a target="_blank" href="https://www.w3schools.com/css/">
+          <a href="#">
             <img src="/assets/svg/skills/html-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">html</span>
           </a>
         </li>
         <li class="skill__item">
-          <a target="_blank" href="https://www.w3schools.com/js/">
+          <a href="#">
             <img src="/assets/svg/skills/javascript-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">javascript</span>
-          </a>
-        </li>
-        <li class="skill__item">
-          <a target="_blank" href="https://www.python.org/">
-            <img src="/assets/svg/skills/python-icon.svg" alt="Skill icon" class="skill__icon" />
-            <span class="skill__name">python</span>
           </a>
         </li>
         <li class="skill__item">
@@ -128,14 +122,6 @@ Please, be welcome to my portfolio and<br />
 
         <a href="" class="contact__item">
           <img src="/assets/svg/contacts/github-icon.svg" alt="">
-        </a>
-
-        <a href="" class="contact__item">
-          <img src="/assets/svg/contacts/instagram-icon.svg" alt="">
-        </a>
-
-        <a href="" class="contact__item">
-          <img src="/assets/svg/contacts/youtube-icon.svg" alt="">
         </a>
         
       </div>
