--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ Please, be welcome to my portfolio and<br />
           </a>
         </li>
         <li class="skill__item">
-          <a href="#">
+          <div>
             <img src="/assets/svg/skills/typescript-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">typescript</span>
-          </a>
+          </div>
         </li>
         <li class="skill__item">
           <a href="#">
