--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@ Please, be welcome to my portfolio and<br />
       <h2 class="section__title">skills</h2>
       <ul class="skills__list">
         <li class="skill__item">
-          <a target="_blank" href="https://reactjs.org/">
+          <div>
             <img src="/assets/svg/skills/react-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">react</span>
-          </a>
+          </div>
         </li>
         <li class="skill__item">
-          <a href="#">
+          <div>
             <img src="/assets/svg/skills/javascript-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">javascript</span>
-          </a>
+          </div>
         </li>
         <li class="skill__item">
           <div>
@@ -88,16 +88,16 @@ Please, be welcome to my portfolio and<br />
           </div>
         </li>
         <li class="skill__item">
-          <a href="#">
+          <div>
             <img src="/assets/svg/skills/html-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">html</span>
-          </a>
+          </div>
         </li>
         <li class="skill__item">
-          <a href="#">
+          <div>
             <img src="/assets/svg/skills/css-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">css</span>
-          </a>
+          </div>
         </li>
       </ul>
     </section>
