--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ Please, be welcome to my portfolio and<br />
         <button id="project-close-btn" class="project__close">
           <img width="30" height="30" src="/assets/svg/x-icon.svg" alt="Close button icon" />
         </button>
-        <img id="project-detail-image" src="/assets/img/project-1.jpg" alt="Project image" class="project__image" />
-        <p id="project-text" class="project__text">Rocketseat's Next Level Week project, where was created a selective collection website for a city using HTML, CSS and JavaScript. (in progress)</p>
+        <img id="project-detail-image" src="/assets/img/instagram.jpg" alt="Project image" class="project__image" />
+        <p id="project-text" class="project__text">Recreating the Instagram login page using HTML and CSS.</p>
         
         <div class="project__controls">
           <button id="prev-project-btn" class="project__select-btn project__select-btn--prev">
