--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Please, be welcome to my portfolio and<br />
           <button id="prev-project-btn" class="project__select-btn project__select-btn--prev">
             <img src="/assets/svg/arrow.svg" alt="previous project button icon">
           </button>
-          <a id="project-link" href="" target="_blank" class="project__link">visit site</a>
+          <a id="project-link" href="https://master-instagram-login-page-clone-html-css-dio-ventura-v.bohr.io/" target="_blank" class="project__link">visit site</a>
           <button id="next-project-btn" class="project__select-btn project__select-btn--next">
             <img src="/assets/svg/arrow.svg" alt="next project button icon">
           </button>
