--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@ Passionate about technology, I believe in the evolution of society by combining 
         </li>
         <li class="skill__item">
           <div>
+            <img src="/assets/svg/skills/python-icon.svg" alt="Skill icon" class="skill__icon" />
+            <span class="skill__name">python</span>
+          </div>
+        </li>
+        <li class="skill__item">
+          <div>
             <img src="/assets/svg/skills/typescript-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">typescript</span>
           </div>
