--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@ Passionate about technology, I believe in the evolution of society by combining 
         </li>
         <li class="skill__item">
           <div>
+            <img src="/assets/svg/skills/aws-icon.svg" alt="Skill icon" class="skill__icon" />
+            <span class="skill__name">AWS</span>
+          </div>
+        </li>
+        <li class="skill__item">
+          <div>
             <img src="/assets/svg/skills/html-icon.svg" alt="Skill icon" class="skill__icon" />
             <span class="skill__name">html</span>
           </div>
