feature: add restaurant finder project

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ Passionate about technology, I believe in the evolution of society by combining 
         <button id="project-close-btn" class="project__close">
           <img width="30" height="30" src="/assets/svg/x-icon.svg" alt="Close button icon" />
         </button>
-        <img id="project-detail-image" src="/assets/img/instagram.jpg" alt="Project image" class="project__image" />
-        <p id="project-text" class="project__text">Recreating the Instagram login page using HTML and CSS.</p>
+        <img id="project-detail-image" src="/assets/img/restaurant-finder.jpg" alt="Project image" class="project__image" />
+        <p id="project-text" class="project__text">Creating a plataform to find a restaurant based on your location, using the Google Maps API, React and JavaScript.</p>
         
         <div class="project__controls">
           <button id="prev-project-btn" class="project__select-btn project__select-btn--prev">
             <img src="/assets/svg/arrow.svg" alt="previous project button icon">
           </button>
-          <a id="project-link" href="https://master-instagram-login-page-clone-html-css-dio-ventura-v.bohr.io/" target="_blank" class="project__link">visit site</a>
+          <a id="project-link" href="https://restaurant-finder-react-dio.netlify.app/" target="_blank" class="project__link">visit site</a>
           <button id="next-project-btn" class="project__select-btn project__select-btn--next">
             <img src="/assets/svg/arrow.svg" alt="next project button icon">
           </button>
